# remzona47-crm

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Procfile  pre-push.sh  pyproject.toml  requirements.txt
.github/workflows/: django-deploy.yml
alembic/: env.py
alembic/versions/: 9527eb0e043f_initial.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_brand_id_alter_car_id_alter_carmodel_id_and_more.py  0003_worklogs_alter_brand_id_alter_car_id_and_more.py  0004_alter_brand_id_alter_car_id_alter_carmodel_id_and_more.py  0005_alter_brand_id_alter_car_id_alter_carmodel_id_and_more.py  0006_delete_position_delete_worklogs.py
api/roster_calendar/: apps.py  serializers.py
api/work_process/: apps.py  models.py  serializers.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  masters.py
core/: access_policies.py  asgi.py  base_views.py  exceptions.py  mixins.py  permissions.py  settings.py  startup.py  urls.py  utils.py  validation.py  wsgi.py
rest_auth/: apps.py  helpers.py  models.py  serializers.py  urls.py  views.py
rest_auth/migrations/: 0001_initial.py  0002_alter_client_id_alter_user_id_alter_client_table.py  0002_client_created_at_alter_client_id_alter_user_id.py  0003_alter_client_created_at_alter_client_id_and_more.py  0003_user_position_user_salary_alter_client_id_and_more.py  0004_alter_client_created_at.py  0004_auto_20220409_1835.py  0005_alter_client_created_at_alter_worklogs_owner.py  0005_alter_user_managers_alter_client_id_alter_user_id.py  0006_alter_client_created_at.py  0006_alter_client_id_alter_user_id.py  0007_alter_client_id_alter_user_id.py  0007_remove_user_salary_alter_client_created_at.py  0008_alter_client_created_at.py  0008_position_alter_client_id_alter_user_id_worklogs_and_more.py  (+5 more)
(+39 files in other folders)
