[tool.poetry]
name = "remzona"
version = "0.1.0"
description = "Backend of remzona47"
authors = ["whatislove118 <oleg.pochikalin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
uvicorn = "^0.17.5"
alembic = "^1.7.6"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
black = "^22.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
