[tool.poetry]
name = "remzona"
version = "0.1.0"
description = "CRM for remzona47"
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.3"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
